[package]
name = "unrealin"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "unrealin"
path = "src/bin.rs"
required-features = ["bin"]
features = ["bin"]

[dependencies]
bitflags = "2.10.0"
byteorder = "1.5.0"
clap = { version = "4.5.50", features = ["derive"], optional = true }
color-eyre = { version = "0.6.5", optional = true }
flate2 = "1.1.4"
memmap2 = "0.9.8"
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", optional = true }

[features]
bin = ["dep:clap", "dep:color-eyre", "dep:tracing-subscriber"]
